register react app with shell

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -26,9 +26,13 @@
     </route> -->
     <route default>
       <application name="login"></application>
+      <application name="@react-app/react-app"></application>
     </route>
     <route path="/dashboard">
       <application name="dashboard-app"></application>
+    </route>
+    <route path="/react">
+      <application name="@react-app/react-app"></application>
     </route>
   </main>
 </single-spa-router>
