setup node and express backend

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -18,15 +18,10 @@
   -->
 
   <main>
-    <!-- <route default>
-      <application name="@react-app/react-app"></application>
-    </route> -->
-    <!-- <route path="/angular">
-      <application name="angular-app/react-app"></application>
-    </route> -->
+    
     <route default>
       <application name="login"></application>
-      <application name="@react-app/react-app"></application>
+      <!-- <application name="@react-app/react-app"></application> if i want to embed react app and shell content in same page -->
     </route>
     <route path="/dashboard">
       <application name="dashboard-app"></application>
